# rust-app

./: .gitignore  Cargo.toml  Dockerfile.localdevelopment  Dockerfile.production  Dockerfile.raw  README.md  docker-compose.yaml  test.sh
app/: Cargo.toml
app/src/: error.rs  i18n.rs  jobs.rs  lib.rs  prelude.rs  server.rs  templates.rs  utils.rs
app/src/accounts/: mod.rs  password.rs  token_generator.rs
app/src/email/: common.rs  smtp.rs
app/src/request/: request.rs
some-file/: write.csv
src/: lib.rs  main.rs  pages.rs
src/web/: mod.rs
src/web/accounts/: forms.rs  mod.rs  models.rs
src/web/accounts/jobs/: mod.rs  odd_registration_attempt.rs  reset_password.rs  verify.rs  welcome.rs
src/web/accounts/views/: login.rs  mod.rs  register.rs  reset_password.rs  utils.rs  verify.rs
src/web/dashboard/: mod.rs
src/web/dashboard/views/: dashboard.rs  mod.rs
src/web/upload/: mod.rs
src/web/upload/views/: ext.rs  mod.rs  upload.rs
templates/email/: README.md  odd-registration-attempt.html  odd-registration-attempt.txt  reset-password.html  reset-password.txt  verify-account.html  verify-account.txt  welcome.html  welcome.txt
templates/upload/: upload.html
