[package]
name = "livedev"
version = "0.1.0"
authors = ["cryptoishere <cryptoishere88@gmail.com>"]
edition = "2018"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
# actix-web = { version = "4", features = ["openssl"] }
# openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"


base64-url = "1.4.8"
log = "*"
app = { path = "app" }
actix-multipart = "0.4"
futures-util = "0.3.21"
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["v4"] }
csv = "1.1.6"

[dev-dependencies]
anyhow = "1.0.42"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
test-log = "0.2.8"

[features]
# default = ["app/template_watcher", "app/static", "app/email-smtp"]
default = ["app/static", "app/email-smtp"]
production = ["app/production", "app/email-smtp", "app/email-postmark"]