[package]
name = "livedev"
version = "0.1.0"
authors = ["cryptoishere <cryptoishere88@gmail.com>"]
edition = "2018"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "app" }
serde = { version = "1.0", features = ["derive"] }
base64-url = "1.4.8"
log = "*"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.42"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
test-log = "0.2.8"

[features]
default = ["app/template_watcher", "app/static", "app/email-smtp"]
production = ["app/production", "app/email-smtp", "app/email-postmark"]
